<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->


    <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/app_name"

       android:summary="@string/pref_title_enable_missed_call"
        android:defaultValue="false" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound"

        />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"

        android:defaultValue="true" />
    <ListPreference
        android:dependency="notifications_new_message"
        android:key="notifications_interval"
        android:title="@string/pref_title_notification_interval"
        android:summary="@string/pref_summary_notification_interval"
        android:defaultValue="1"
        android:entries="@array/pref_notif_interval_titles"
        android:entryValues="@array/pref_notif_interval_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
